ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: broker.ishankhare.dev
  name: knative-broker-ingress
  namespace: knative-eventing
spec:
  rules:
  - host: broker.ishankhare.dev
    http:
      paths:
      - backend:
          service:
            name: broker-ingress
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - broker.ishankhare.dev
    secretName: broker-prod
status:
  loadBalancer:
    ingress:
    - hostname: ishankhare.dev
